FIX: No extra time on small calendar
Closes #196

--- a/less/custom.less
+++ b/less/custom.less
@@ -82,6 +82,9 @@
 	.event_legend_name {
 		font-weight: normal;
 	}
+	.showntime {
+		display: none;
+	}
 }
 
 .jevbootstrap {
